# steuerreport-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
configs/: crypto_price_sources.example.json  golden_hashes.json
docs/: 00_PROJEKTPLAN.md  01_QUALITAETSREGELN.md  02_ARCHITEKTUR_VORSCHLAG.md  04_UI_ANFORDERUNGEN.md  05_API_ERWEITERUNG.md  06_WETTBEWERBS_FEATURES.md  07_HELIUM_STEUERKONZEPT.md  08_STEUERLOGIK_TRADEREPUBLIC_2026.md  09_DEPOT_TRENNUNG_KONZEPT.md  100_BINANCE_2021_ACCOUNT_STATEMENT_INCOME_AUDIT_2026-05-09.md  101_BINANCE_2021_ACCOUNT_STATEMENT_INCOME_IMPORT_2026-05-09.md  102_BINANCE_2021_ACCOUNT_STATEMENT_INCOME_VALUATION_AUDIT_2026-05-09.md  103_BINANCE_2021_INCOME_CANDIDATE_PRICE_BACKFILL_2026-05-09.md  104_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_BINANCE_2021_INCOME_2026-05-09.md  105_BINANCE_DUST_BLOCKPIT_REFERENCE_EXCLUSIONS_2026-05-09.md  106_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_BINANCE_DUST_REFERENCE_EXCLUSIONS_2026-05-09.md  107_INFERRED_VTHO_REWARD_FROM_BINANCE_DUST_2026-05-09.md  108_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_VTHO_INFERRED_REWARD_2026-05-09.md  109_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_TOKEN_ALIAS_FIX_2026-05-09.md  10_INGESTION_SMART_CLEANING_MASTERPLAN.md  110_SPAM_TOKEN_IGNORED_CANDIDATES_2026-05-09.md  111_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_SPAM_IGNORED_2026-05-09.md  112_SOLANA_BLOCKPIT_REFERENCE_EXCLUSIONS_2026-05-09.md  113_CHRONOLOGICAL_BALANCE_BREAK_AUDIT_AFTER_SOLANA_BLOCKPIT_REFERENCE_EXCLUSIONS_2026-05-09.md  (+222 more)
(+234 files in other folders)
