[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steuerreport-engine"
version = "0.1.0"
description = "Modulare, auditierbare Steuer-Engine (DE, ab 2020)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Steuerreport Team" }
]
dependencies = [
  "fastapi>=0.115,<0.116",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
  "starlette>=0.37.2,<0.42",
  "python-dateutil>=2.9,<3.0",
  "httpx>=0.28,<0.29",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "xlrd>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<6.0",
  "httpx>=0.28,<0.29",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "pip-audit>=2.7,<3.0",
  "types-python-dateutil>=2.9.0.20240316"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["tests/fixtures"]

[tool.coverage.run]
source = ["src/tax_engine"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
